methods.returning.MethodsReturning.scala.error
Compilation error:
MethodsReturning:23: error: Unmatched closing brace '}' ignored here
}
^