methods.returning.MethodsReturning.scala.code
var sawBaggle :Boolean
var seebBaggle : Boolean
seebBaggle = false
sawBaggle = false  
 for (stepper <-1 to 6){
      forward()
 }  
def haveBaggle():Boolean ={
      if (isOverBaggle()){
        return sawBaggle= true
      }else{
        forward()
      }
      for (stepper1 <- 1 to 6){
          backward()
      }
      if (sawBaggle){
        return seenBaggle
      }
    }
}